--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,8 +70,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.4.1')
     implementation("com.google.android.gms:play-services-base:17.6.0")
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
-    implementation 'com.google.firebase:firebase-analytics-ktx'
+    // implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation "androidx.browser:browser:1.3.0"
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
-    implementation 'com.android.support:multidex:2.0.3'
+    // implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    // implementation 'com.android.support:multidex:2.0.3'
 }
