--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,20 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   carousel_slider: ^4.0.0
+  country_code_picker: ^2.0.2
   crypto: ^3.0.1
   cupertino_icons: ^1.0.2
-  firebase_analytics: ^8.3.3
+  dio: ^4.0.0
+  equatable: ^2.0.3
+  # firebase_analytics: ^8.3.3
   firebase_auth: ^3.1.2
   firebase_core: ^1.7.0
   flutter:
     sdk: flutter
-  get: ^4.3.8
-  google_sign_in: ^5.1.1
+  get_it: ^7.2.0
+  json_annotation: ^4.1.0
+  json_serializable: ^5.0.2
+  provider: ^6.0.1
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   sign_in_with_apple: ^3.2.0
 
