--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   provider: ^6.0.1
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   sign_in_with_apple: ^3.2.0
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   build_runner: ^2.1.2
